--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,6 +1,6 @@
 :root {
-	--foreground-color: black;
-	--background-color: white;
+	--foreground-color: white;
+	--background-color: black;
 	--wrong-color: red;
 }
 
